--- a/Android/res/values-fr/strings.xml
+++ b/Android/res/values-fr/strings.xml
@@ -234,12 +234,12 @@
     <string name="layout_fragment_dialog_device_user">Utilisateur</string>
 
     <!-- fragment_dialog_light -->
-    <string name="layout_fragment_dialog_light_name">Nom :</string>
-    <string name="layout_fragment_dialog_light_room">Pièce :</string>
+    <string name="layout_fragment_dialog_light_name">Nom</string>
+    <string name="layout_fragment_dialog_light_room">Pièce</string>
 
     <!-- fragment_dialog_plant_info -->
-    <string name="layout_fragment_dialog_plant_info_name">Nom de la plante :</string>
-    <string name="layout_fragment_dialog_plant_info_photo">Photo de la plante :</string>
+    <string name="layout_fragment_dialog_plant_info_name">Nom de la plante</string>
+    <string name="layout_fragment_dialog_plant_info_photo">Photo de la plante</string>
 
     <!-- fragment_dialog_sensor -->
     <string name="layout_fragment_dialog_sensor_alias">Alias :</string>
@@ -272,9 +272,9 @@
 
     <!-- fragment_gps -->
     <string name="layout_fragment_gps_geo_turn_on">Activer la géolocalisation</string>
-    <string name="layout_fragment_gps_define_home">Définir le domicile :</string>
+    <string name="layout_fragment_gps_define_home">Définir le domicile (Latitude / Longitude)</string>
     <string name="layout_fragment_gps_coords">Latitude / Longitude</string>
-    <string name="layout_fragment_gps_define_circle">Définir le périmètre :</string>
+    <string name="layout_fragment_gps_define_circle">Définir le périmètre</string>
     <string name="layout_fragment_gps_radius_hint">En mètres</string>
     <string name="layout_fragment_gps_clear_data">Effacer les données</string>
 
