Add GPS provider

--- a/Android/res/values-fr/strings.xml
+++ b/Android/res/values-fr/strings.xml
@@ -301,4 +301,6 @@
     <string name="user_account_type_visitor">Visiteur</string>
     <string name="sync_frequency">Fréquence de synchronisation</string>
     <string name="sync_unit">En heures</string>
+    <string name="pref_gps_provider_title">Utiliser le service GPS</string>
+    <string name="pref_gps_provider_summary">Par défaut, le réseau mobile est utilisé pour la localisation</string>
 </resources>
