--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -305,4 +305,6 @@
     <string name="user_account_type_blocked">Blocked</string>
     <string name="sync_frequency">Synchronization Frequency</string>
     <string name="sync_unit">In hours</string>
+    <string name="pref_gps_provider_title">Use GPS provider</string>
+    <string name="pref_gps_provider_summary">By default, network provider is used for positioning</string>
 </resources>
