--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -309,4 +309,7 @@
     <string name="pref_gps_provider_summary">By default, network provider is used for positioning</string>
     <string name="geo_enter_message">Welcome home!</string>
     <string name="geo_exit_message">See you soon!</string>
+    <string name="pref_ignore_doze_title">Ignore energy optimizations</string>
+    <string name="xml_pref_security_marshmallow_title">Permissions</string>
+    <string name="xml_pref_security_marshmallow_gps_title">Location Permission</string>
 </resources>
