--- a/Android/res/values-fr/strings.xml
+++ b/Android/res/values-fr/strings.xml
@@ -310,4 +310,6 @@
     <string name="xml_pref_security_marshmallow_gps_title">Permission de Localisation</string>
     <string name="ok">OK</string>
     <string name="fragment_gps_permission_warning">Cette fonctionnalité requiert l\'autorisation de localisation. Veuillez l\'activer depuis Paramètres -> Sécurité.</string>
+    <string name="first_run_description">Bienvenue à Atlantis ! Encore quelques étapes à compléter avant de pouvoir profiter de votre nouveau système domotique.</string>
+    <string name="intro_validate_error">Merci de remplir l\'adresse du serveur et la clé de connexion !</string>
 </resources>
