--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -317,4 +317,8 @@
     <string name="first_run_description">Welcome to Atlantis! You need to complete the following steps before to start enjoying your new home automation system.</string>
     <string name="intro_validate_error">Please fill the server address and the connection key!</string>
     <string name="widget_alarm_label">Atlantis Alarm</string>
+    <string name="xml_pref_divers_log_title">Log</string>
+    <string name="xml_pref_divers_log_section">Logs</string>
+    <string name="xml_pref_divers_log_activate_title">Activate logging</string>
+    <string name="xml_pref_divers_log_level_title">Logging level</string>
 </resources>
