--- a/Android/res/values/strings.xml
+++ b/Android/res/values/strings.xml
@@ -191,7 +191,7 @@
     <string name="menu_fragment_courses_offline">Offline Mode</string>
     <string name="menu_fragment_courses_clear">Clear</string>
 
-    <!-- fragment_cuisine -->
+    <!-- fragment_kitchen -->
     <string name="menu_fragment_cuisine_add">Add</string>
     <string name="menu_fragment_cuisine_show_all">Show all</string>
 
