--- a/Android/res/values-fr/strings.xml
+++ b/Android/res/values-fr/strings.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_datetime_format">dd-MM-yyyy HH:mm:ss</string>
-    <string name="app_date_format">yyyy-MM-dd</string>
     <string name="app_last_connection">Dernière connexion le</string>
 
     <!-- MainActivity -->
@@ -318,4 +316,6 @@
     <string name="xml_pref_divers_log_activate_title">Activer la journalisation</string>
     <string name="xml_pref_divers_log_level_title">Niveau de journalisation</string>
     <string name="fragment_scenarios_dashboard">Ajouter des widgets à l\'accueil</string>
+    <string name="xml_pref_divers_home_title">Type de l\'écran d\'accueil</string>
+    <string name="xml_pref_divers_home_summary">Par défaut, l\'écran widgets est utilisé</string>
 </resources>
